deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zus
  labels:
    app: zus
spec:
  selector:
    matchLabels:
      app: zus
  template:
    spec:
      containers:
      - name: zus
        image: horvatic/zracni-udar-service:${TAG}
        ports:
          - containerPort: 8080
            name: "zus-http"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
      nodeSelector:
        architecture: arm64
