deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: zus-http
  selector:
    app: zus
